<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/light_purple">

    <TextView
        android:id="@+id/title_login_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_form"
        android:textSize="35sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:hint="@string/fill_user_name"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="35dp"
        android:gravity="right"
        android:inputType="textPassword"
        android:hint="@string/fill_password"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:text="@string/login"
        />
    <Button
        android:id="@+id/btn_register"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="ثبت نام"/>

</LinearLayout>