<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@mipmap/bgblue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txt_search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="130dp"
            android:hint="@string/txt_search" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/btn_search"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top">


            <TableRow android:visibility="gone">

                <EditText
                    android:id="@+id/city_name"
                    android:layout_width="200dp"
                    android:layout_height="40dp" />

                <Button
                    android:id="@+id/set_city"
                    android:layout_width="200dp"
                    android:layout_height="40dp" />

            </TableRow>

            <TableRow
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/city_value"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/city_title"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:text="@string/city"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/country_value"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/country_title"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:text="@string/country"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </TableRow>



            <TableRow
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/high_value"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/high_title"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:text="@string/high"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/low_value"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/low_title"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:text="@string/low"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/text_value"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:text="@string/text"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </TableRow>


        </TableLayout>


    </LinearLayout>

    <!--    <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"/>-->

    <!--   <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <TextView
               android:id="@+id/value_city"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="aaa"/>

           <TextView
               android:id="@+id/title_city"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="city"/>

       </LinearLayout>
   -->
</RelativeLayout>
